Meyers/css/style.css
@charset "UTF-8";

/*fixes floated divs*/

.clearfix {
    overflow: auto;
}

html{
    background-color: #D2F8F9;
}

body {
    font-family: 'Roboto', sans-serif;
    min-width: 960px;
}

a {
    text-transform: uppercase;
    font-size: 12px;
    /*removes underline from link*/
    text-decoration: none;
}


/* unvisited link - has not been clicked */

a:link {
    color: #FFE9B3;
}


/* visited color - once it is clicked */

a:visited {
    color: #FFF;
}


/* mouse over color */

a:hover {
    color: #FFBC00;
    text-decoration: none;
}

.logo {
    height: 100px;
    width: 150px;
    background-color: #7696A8;
    float: left;
    border-radius: 50px;
    border-left: 10px solid #FFBC00;
    border-right: 10px solid #FFBC00;
    border-bottom: 10px solid #FFBC00;
    border-top: 0px solid;
    margin-left: 30px;
    padding-top: 20px;
    padding-right: 20px;
    padding-left: 20px;
}

.main_nav {
    background-color: #7696A8;
    border-radius: 50px;
    border-left: 10px solid #FFBC00;
    border-right: 10px solid #FFBC00;
    border-bottom: 10px solid #FFBC00;
    border-top: 0px solid;
    float: right;
    margin-right: 30px;
}

    .main_nav ul {
        list-style: none;
        margin: 0px;
        padding: 0px;
    }

        .main_nav ul li {
            float: left;
            /*top right bottom left*/
            margin: 10px 0px 0px 10px;
            padding-top: 10px;
            padding-right: 20px;
            padding-bottom: 15px;
            padding-left: 10px;
        }


.footer_item_20 {
    width: 20%;
    float: left;
}

.footer_item_40 {
    width: 40%;
    float: left;
}

.contact_fixer {
    width: 320px;
    height: 94px;
    border-radius: 50px;
    border-top: 6px solid #FFBC00;
    border-right: 6px solid #FFBC00;
    border-bottom: 0px solid;
    border-left: 6px solid #FFBC00;
}

    .address {
        float: left;
        padding-top: 15px;
        padding-left: 15px;
    }

        .address ul {
            list-style: none;
            padding: 0px;
        }

            .address ul li {
                margin: 0px;
                text-align: center;
                font-size: 11px;
                color: #496473;
            }

    .phone {
        padding-top: 15px;
        float: right;
        padding-right: 15px;
    }

        .phone ul {
            list-style: none;
            padding: 0px;
        }

            .phone ul li {
                margin: 0px;
                text-align: center;
                font-size: 11px;
                color: #496473;
            }

.client_fixer {
    width: 130px;
    margin-top: 65px;
    border-radius: 50px;
    border-top: 6px solid #FFBC00;
    border-right: 6px solid #FFBC00;
    border-bottom: 0px solid;
    border-left: 6px solid #FFBC00;
    margin:auto;
    margin-top: 65px;
}

    .client_list ul {
        list-style: none;
        margin: 0px;
        padding: 8px;
    }

        .client_list ul li {
            margin: 0px;
            text-align: center;
            font-size: 11px;
            color: #496473;
        }

.email_fixer {
    width: 320px;
    height: 94px;
    border-radius: 50px;
    border-top: 6px solid #FFBC00;
    border-right: 6px solid #FFBC00;
    border-bottom: 0px solid;
    border-left: 6px solid #FFBC00;
    float: right;
}

    .emails ul {
        list-style: none;
        margin: 0px;
        padding-top: 15px;
    }

        .emails ul li {
            margin: 0px;
            text-align: center;
            font-size: 11px;
            color: #496473;
        }

.centered_text {
    text-align: center;
    color: #496473;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 40px;
    padding-right: 40px;
}

.slideshow{
    background-color: #7696A8;
    border-top: 6px solid #FFBC00;
    border-bottom: 6px solid #FFBC00;
    position: relative;
    padding: 10px;
}

.slideshow li {
    text-align: center;
}

.thumbnail_container img{
    width: 100px;
}

/*for a sticky footer https://css-tricks.com/couple-takes-sticky-footer/*/

    html, body {
        height: 100%;
        margin: 0;
    }
    .wrapper {
        min-height: 100%;
        /* Equal to height of footer */
        /* But also accounting for potential margin-bottom of last child */
        margin-bottom: -101px;
    }
    .footer, .push {
        height: 101px;
    }

